--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^21.0.0",
     "@primeuix/themes": "^2.0.1",
     "angular-new-router": "github:angular/router",
+    "jwt-decode": "^4.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
