--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@angular/router": "^21.0.0",
     "@primeuix/themes": "^2.0.1",
     "angular-new-router": "github:angular/router",
+    "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^8.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
