--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@emailjs/browser": "^4.4.1",
     "@primeuix/themes": "^2.0.1",
     "angular-new-router": "github:angular/router",
     "chart.js": "^4.5.1",
